--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
 ---
+# SPDX-FileCopyrightText: Jürgen Mülbert <juergen.muelbert@web.de>
+# SPDX-License-Identifier: EUPL-1.2
 name: Release Pipeline
 
 on:
@@ -98,7 +100,7 @@ jobs:
           verbose: true
 
       - name: 📦 Publish to TestPyPI
-        if: "!startsWith(github.ref, 'refs/tags/v')"
+        if: !startsWith(github.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@67339c736fd9354cd4f8cb0b744f2b82a74b5c70 # v1.12.3
         with:
           password: ${{ secrets.TEST_PYPI_TOKEN }}
@@ -177,4 +179,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install jmbde-python==${{ needs.release.outputs.version }}
           python -c "import jmbde; print(jmbde.__version__)"
-          
+
