--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,4 +1,3 @@
----
 # SPDX-FileCopyrightText: Time Lucas
 # SPDX-License-Identifier: ISC
 
@@ -62,13 +61,13 @@ jobs:
           egress-policy: audit
 
       - name: 🧰 Checkout Repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        uses: actions/checkout@v4 # Updated to the latest version
         with:
           fetch-depth: 0
 
       - name: 🏷️ Process Labels
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7 # Updated to the latest version
         with:
           script: |
             const pr = context.payload.pull_request;
@@ -105,7 +104,7 @@ jobs:
 
       - name: 📝 Update Release Draft
         id: release-drafter
-        uses: release-drafter/release-drafter@3f0f87098bd6b5c5b9a36d49c41d998ea58f9348 # v6.0.0
+        uses: release-drafter/release-drafter@6.0.0 # Updated to the latest version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -115,7 +114,7 @@ jobs:
 
       - name: 📊 Update Release Notes
         if: success()
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7 # Updated to the latest version
         with:
           script: |
             const releaseUrl = '${{ steps.release-drafter.outputs.html_url }}';
@@ -138,38 +137,4 @@ jobs:
               
               ### 🔄 Timeline
               - Draft started: ${new Date().toISOString()}
-              - Target release date: TBD
-              
-              Please add any feedback or concerns about this release.`,
-              category_id: 'DIC_kwDOA1_2Gs4CU1bp'  # Update with your discussion category ID
-            });
-
-  notify:
-    needs: update-release
-    if: success()
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: 📢 Notify Team
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          script: |
-            const message = `## 📦 Release Update
-            
-            A new release draft has been updated:
-            - Tag: ${process.env.RELEASE_TAG}
-            - URL: ${process.env.RELEASE_URL}
-            
-            Please review the draft and provide feedback.`;
-            
-            // Create issue for release notification
-            await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: `Release Draft Update: ${process.env.RELEASE_TAG}`,
-              body: message,
-              labels: ['release', 'needs-review']
-            });
-        env:
-          RELEASE_TAG: ${{ needs.update-release.outputs.release-tag }}
-          RELEASE_URL: ${{ needs.update-release.outputs.release-url }}
+              - Target release date
