--- a/.github/workflows/opened-issues-triage.yml
+++ b/.github/workflows/opened-issues-triage.yml
@@ -29,7 +29,7 @@ jobs:
 
     permissions:
       issues: write
-      project: write
+      #  project: write
 
     outputs:
       processed: ${{ steps.triage.outputs.processed }}
