--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -113,17 +113,21 @@ jobs:
           echo "" >> quality_report.md
 
           if [ -f ".pre-commit-output.txt" ]; then
-            echo "### Pre-commit Output" >> quality_report.md
-            echo "\`\`\`" >> quality_report.md
-            cat .pre-commit-output.txt >> quality_report.md
-            echo "\`\`\`" >> quality_report.md
+            {
+              echo "### Pre-commit Output"
+              echo "\`\`\`"
+              cat .pre-commit-output.txt
+              echo "\`\`\`"
+            } >> quality_report.md
           fi
 
           if [ "${{ steps.check.outputs.files-changed }}" == "true" ]; then
-            echo "### 📝 Required Changes" >> quality_report.md
-            echo "\`\`\`diff" >> quality_report.md
-            git diff >> quality_report.md
-            echo "\`\`\`" >> quality_report.md
+              {
+                echo "### 📝 Required Changes"
+                echo "\`\`\`diff"
+                git diff
+                echo "\`\`\`"
+              } >> quality_report.md
           fi
 
       - name: 🔄 Create Fix PR
