--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,7 +105,7 @@ jobs:
           COVERAGE=$(coverage report | grep TOTAL | awk '{print $4}' | sed 's/%//')
           echo "percentage=${COVERAGE}" >> "$GITHUB_OUTPUT"
 
-          if [ "${COVERAGE}" -lt "${{ github.event.inputs.coverage-threshold || 80 }}" ]; then
+          if [ "${COVERAGE}" -lt "80" ]; then
             echo "::error::Coverage ${COVERAGE}% is below threshold of 80%"
             exit 1
           fi
